[project]
name = "github"
version = "0.1.0"
description = "GitHub agent that detects code changes and updates README"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pygithub>=2.1.0",
    "gitpython>=3.1.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "requests>=2.31.0"
]t]
name = "github"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "pydantic>=2.12.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
]
